# ark

./: AGENTS.md  README.md  TODO.md  pyproject.toml
examples/: prompt  try_chat.py
src/ark/: __init__.py  entity.py  model.py  solver.py
tests/: test_entity.py  test_model.py  test_solver.py
