[project]
name = "ark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kwanghoon Son", email = "kwangson@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
